@@ -3,6 +3,13 @@
 	* io-read.c: Add #include <sys/mman.h> for munmap decl.
 	* release-protid.c: Likewise.
 
+1999-07-09  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* file-get-storage-info.c (netfs_S_file_get_storage_info): Use
+	mmap instead of vm_allocate.
+	* file-get-translator.c (netfs_S_file_get_translator): Likewise.
+	* io-read.c (netfs_S_io_read): Likewise.
+
 1999-07-03  Thomas Bushnell, BSG  <tb@mit.edu>
 
 	* io-read.c (netfs_S_io_read): Use munmap instead of
